--- a/Bet.PI/package.json
+++ b/Bet.PI/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@types/node": "^22.7.4",
     "@vitejs/plugin-vue": "^5.1.2",
     "vite": "^5.4.1"
   }
