--- a/Bet.PI/dockerfile
+++ b/Bet.PI/dockerfile
@@ -11,4 +11,5 @@ FROM nginx:stable-alpine as production-stage
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf 
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 EXPOSE 80
+EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
