--- a/Bet.PI/package.json
+++ b/Bet.PI/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "vue": "^3.4.37",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
