--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,40 +8,8 @@ services:
       - "3000:3000"
     networks:
       - betpi-network
-    depends_on:
-      - backend
-    environment:
-      - VITE_API_URL=http://backend:8000  # URL do backend
-
-  backend:
-    build:
-      context: ./betPI
-    container_name: betpi_backend
-    ports:
-      - "8000:8000"
-    networks:
-      - betpi-network
-    environment:
-      - DB_CONNECTION=postgres
-      - DB_HOST=db
-      - DB_PORT=3306
-      - DB_DATABASE=betdb
-      - DB_USERNAME=root
-      - DB_PASSWORD=root
-    depends_on:
-      - db
-
-  db:
-    image: mysql:5.7
-    container_name: betpi_db
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: betdb
-    networks:
-      - betpi-network
-    ports:
-      - "3306:3306"
 
 networks:
   betpi-network:
-    driver: bridge
+    name: betPI
+    external: true
